// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Flex> > Snapshot Test > changes rendered elements 1`] = `
<section
  class="_flex_fd9099"
  data-testid="flex"
  style="--flex-direction: row; --align-items: flex-start; --justify-content: flex-start; --flex-wrap: nowrap; --gap: 0; --padding-top: 0; --padding-right: 0; --padding-bottom: 0; --padding-left: 0; --margin-top: 0; --margin-right: 0; --margin-bottom: 0; --margin-left: 0; --width: auto; --min-width: auto; --max-width: 100px;"
>
  <div
    class="_flexItem_c2f191 _longhand_c2f191"
    style="--min-width: auto; --max-width: none; --flex-grow: 1; --flex-shrink: 1; --flex-basis: auto; --padding-top: 0; --padding-right: 0; --padding-bottom: 0; --padding-left: 0; --margin-top: 0; --margin-right: 0; --margin-bottom: 0; --margin-left: 0;"
  >
    test
  </div>
  <div
    class="_flexItem_c2f191 _longhand_c2f191"
    style="--min-width: auto; --max-width: none; --flex-grow: 1; --flex-shrink: 1; --flex-basis: auto; --padding-top: 0; --padding-right: 0; --padding-bottom: 0; --padding-left: 0; --margin-top: 0; --margin-right: 0; --margin-bottom: 0; --margin-left: 0;"
  >
    test
  </div>
</section>
`;

exports[`<Flex> > Snapshot Test > changes the rendered component 1`] = `
<div
  class="_flex_fd9099"
  data-testid="flex"
  style="--flex-direction: row; --align-items: flex-start; --justify-content: flex-start; --flex-wrap: nowrap; --gap: 0; --padding-top: 0; --padding-right: 0; --padding-bottom: 0; --padding-left: 0; --margin-top: 0; --margin-right: 0; --margin-bottom: 0; --margin-left: 0; --width: auto; --min-width: auto; --max-width: 100px;"
>
  <div
    class="_flexItem_c2f191 _longhand_c2f191"
    style="--min-width: auto; --max-width: none; --flex-grow: 1; --flex-shrink: 1; --flex-basis: auto; --padding-top: 0; --padding-right: 0; --padding-bottom: 0; --padding-left: 0; --margin-top: 0; --margin-right: 0; --margin-bottom: 0; --margin-left: 0;"
  >
    test
  </div>
  <div
    class="_flexItem_c2f191 _longhand_c2f191"
    style="--min-width: auto; --max-width: none; --flex-grow: 1; --flex-shrink: 1; --flex-basis: auto; --padding-top: 0; --padding-right: 0; --padding-bottom: 0; --padding-left: 0; --margin-top: 0; --margin-right: 0; --margin-bottom: 0; --margin-left: 0;"
  >
    test
  </div>
</div>
`;
